1. Include static files(bootstraps, jquery, popper.js). 2. Render page using iteration {{#each Arr}}. 3. import JSON file for movie information array. 4. Using params to record movie.id from URL and use this recorded movie.id to filter movie info in JSON file. And render show page with this info. 5. Through req.query to get submit input value(querystring) to filter movies.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,18 +6,25 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  {{!-- import css file --}}
+  <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
 </head>
 
 <body>
   {{!-- nav bar --}}
-  <nav class="navbar navbar-light bg-light">
+  <nav class="navbar navbar-dark bg-dark">
     <div class="container-fluid">
-      <span class="navbar-brand mb-0 h1">Navbar</span>
+      <span class="navbar-brand mb-0 h1"><a href='/'>Movie List</a></span>
     </div>
   </nav>
 
-  {{!-- partial template --}}
+  {{!-- partial template wil replace this part --}}
   {{{ body}}}
+
+  {{!-- import JS --}}
+  <script src="/javascripts/jquery-3.6.0.min.js"></script>
+  <script src="/javascripts/popper.js"></script>
+  <script src="/javascripts/bootstrap.min.js"></script>
 </body>
 
 </html>
